# discord-markov-bot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  messages.db
.github/workflows/: rust.yml
migrations/2018-03-12-165142_messages/: up.sql
src/: main.rs  models.rs  schema.rs
src/commands/: helper.rs  hivemind.rs  impersonate.rs  meta.rs  mod.rs
