[package]
name = "discord-markov-bot"
version = "0.6.0"
authors = ["Taha Hawa <tahahawa@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_yaml = "0.7"
markov = "1.0"
typemap = "0.3"
diesel = {version = "1.4",features = ["postgres","r2d2", "numeric", "bigdecimal", "chrono"]}
num = "0.2.0"
bigdecimal = "0.0.14"
chrono = "0.4.5"
log = "0.4"
pretty_env_logger = "0.2"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
# git = "https://github.com/tahahawa/serenity.git"
branch = "current"
default-features = false
features = ["cache", "framework", "builder", "client", "utils", "model", "standard_framework"]

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
